@@ -942,6 +942,13 @@ function themeblvd_get_textures() {
  */
 function themeblvd_get_select( $type ) {
 
+	// WPML compat
+	if ( isset( $GLOBALS['sitepress'] ) ) {
+		remove_filter( 'get_pages', array( $GLOBALS['sitepress'], 'exclude_other_language_pages2' ) );
+		remove_filter( 'get_terms_args', array( $GLOBALS['sitepress'], 'get_terms_args_filter' ) );
+		remove_filter( 'terms_clauses', array( $GLOBALS['sitepress'], 'terms_clauses' ) );
+	}
+
 	$select = array();
 
 	switch ( $type ) {
@@ -964,17 +971,7 @@ function themeblvd_get_select( $type ) {
 		case 'categories' :
 			$select['all'] = __( '<strong>All Categories</strong>', 'themeblvd' );
 
-			if ( isset( $GLOBALS['sitepress'] ) ) {
-
-				// WPML compat
-				global $sitepress;
-				remove_filter('terms_clauses', array( $sitepress, 'terms_clauses' ));
-				$categories = get_categories( array( 'hide_empty' => false ) );
-				add_filter('terms_clauses', array( $sitepress, 'terms_clauses' ));
-
-			} else {
-				$categories = get_categories( array( 'hide_empty' => false ) );
-			}
+			$categories = get_categories( array( 'hide_empty' => false ) );
 
 			foreach ( $categories as $category ) {
 				$select[$category->slug] = $category->name;
@@ -1007,6 +1004,14 @@ function themeblvd_get_select( $type ) {
 			break;
 
 	}
+
+	// Put WPML filters back
+	if ( isset( $GLOBALS['sitepress'] ) ) {
+		add_filter( 'get_pages', array( $GLOBALS['sitepress'], 'exclude_other_language_pages2' ) );
+		add_filter( 'get_terms_args', array( $GLOBALS['sitepress'], 'get_terms_args_filter' ) );
+		add_filter( 'terms_clauses', array( $GLOBALS['sitepress'], 'terms_clauses' ), 10, 4 );
+	}
+
 	return $select;
 }
 
