@@ -12,6 +12,7 @@ Jump Start Changelog
 * Added support for Jumbotron, can be used with Theme Blvd Shortcodes 1.3+, Theme Blvd Layout Builder 1.2.3+.
 * Added support for Gallery slider, can be used with Theme Blvd Shortcodes 1.3+.
 * Updated TGM Plugin Activation to 2.4.0.
+* Fixed some recent, admin compatibility issues with WPML.
 
 --------------------------------------------------------------
 
